# Divine_Inventory

./: .env.example  .gitignore  .replit  README.md  inspect_db.py  pnpm-lock.yaml  pyproject.toml  render.yaml  vercel.json
api/: index.py  models.py  requirements.txt
api/routers/: ledger.py  orders.py  products.py  reconciliation.py  returns.py
artifacts/api-server/: database.py  main.py  schemas.py
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/routers/: alerts.py  dashboard.py  inventory.py  warehouses.py
artifacts/api-server/src/routes/: alerts.ts  dashboard.ts  index.ts  inventory.ts  ledger.ts  orders.ts  products.ts  reconciliation.ts  returns.ts  warehouses.ts
artifacts/inventory-app/: index.html  package.json  vite.config.ts
artifacts/inventory-app/.replit-artifact/: artifact.toml
artifacts/inventory-app/src/: App.tsx  index.css
artifacts/inventory-app/src/components/: Layout.tsx
artifacts/inventory-app/src/pages/: alerts.tsx  dashboard.tsx  inventory.tsx  orders.tsx  products.tsx  reconciliation.tsx  returns.tsx  warehouses.tsx
attached_assets/: Pasted--Divine-Hindu-Inventory-Tracking-System-Role-Principal-_1781801727843.txt  Pasted--file-md-Project-Context-Objectives-Build-a-production-_1781801718836.txt
lib/api-spec/: openapi.yaml
lib/db/src/schema/: alerts.ts  index.ts  inventory.ts  inventory_ledger.ts  orders.ts  products.ts  reconciliation.ts  returns.ts  stock_movements.ts  warehouses.ts
scripts/src/: seed.ts
